--- a/css/reviews.css
+++ b/css/reviews.css
@@ -14,7 +14,9 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    object-fit: cover;
+    height: auto;
+    width: 100%;
+    max-width: 720px;
     transition: all 0.5s;
 }
 
