--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,8 @@
     line-height: normal;
     display: inline-block;
     vertical-align: middle;
-    margin-left: 200px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 
