--- a/css/index.css
+++ b/css/index.css
@@ -89,20 +89,21 @@
     display: grid;
     gap: 20px;
     margin-top: 100px;
-    /*grid-template-columns: auto auto;*/
     grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
     place-items: center;
 }
 
 #services-grid div {
     cursor: pointer;
-    width: 100%;
-    height: auto;
-    max-width: 600px;
+    width: 60vw;
+    height: 650px;
+    max-width: 650px;
     display: grid;
     place-items: center;
     border-radius: 30px;
     margin-bottom: 100px;
+    margin-right: auto;
+    margin-left: auto;
     transition: transform 0.5s;
 }
 
