--- a/css/index.css
+++ b/css/index.css
@@ -87,10 +87,8 @@
 
 #services-grid {
     display: grid;
-    gap: 20px;
     margin-top: 100px;
-    grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
-    place-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
 }
 
 #services-grid div {
@@ -102,9 +100,9 @@
     place-items: center;
     border-radius: 30px;
     margin-bottom: 100px;
-    margin-right: auto;
-    margin-left: auto;
     transition: transform 0.5s;
+    margin-right: 100px;
+    margin-left: 100px;
 }
 
 #services-grid div:hover {
