--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,6 @@
 
 #reviews {
     background: #06090E;
-    height: 900px;
     text-align: center;
 }
 
@@ -150,4 +149,5 @@
 #reviews a {
     color: white;
     font-size: 24px;
+    padding-bottom: 50px;
 }
