--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;600;700&family=Roboto+Condensed&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
 	background: #06090E;
 	font-family: 'IBM Plex Sans', sans-serif;
 	margin: 0px 0px 0px 0px;
+}
+
+button {
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .top-navigation {
